--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,35 @@
 asgiref==3.5.2
 certifi==2022.6.15
 charset-normalizer==2.0.12
+cycler==0.11.0
 Django==4.0.5
+djangorestframework==3.13.1
+easyocr==1.5.0
+fonttools==4.33.3
 idna==3.3
+imageio==2.19.3
+kiwisolver==1.4.3
+matplotlib==3.5.2
+networkx==2.8.4
+numpy==1.23.0
+opencv-python==4.6.0.66
+opencv-python-headless==4.5.4.60
+packaging==21.3
+Pillow==9.1.1
+pyparsing==3.0.9
+python-bidi==0.4.2
+python-dateutil==2.8.2
+pytz==2022.1
+PyWavelets==1.3.0
+PyYAML==6.0
 requests==2.28.0
+scikit-image==0.19.3
+scipy==1.8.1
+six==1.16.0
 sqlparse==0.4.2
+tifffile==2022.5.4
+torch==1.12.0
+torchvision==0.13.0
+typing_extensions==4.2.0
 tzdata==2022.1
 urllib3==1.26.9
